--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.mat filter=lfs diff=lfs merge=lfs -text
+*.abf filter=lfs diff=lfs merge=lfs -text
