--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *.sublime-workspace
 *.sublime-project
-manuscript_workspace.sublime-project
-manuscript_workspace.sublime-workspace
+*.sublime-project
+*.sublime-workspace
